--- a/demo/index.html
+++ b/demo/index.html
@@ -1,8 +1,10 @@
+
 <!doctype html>
 <body>
   <video class="vew" style="position:absolute; bottom:0; right:0;" controls>
-    <source src="http://www.html5rocks.com/en/tutorials/video/basics/Chrome_ImF.mp4"></source>
-    <source src="http://www.html5rocks.com/en/tutorials/video/basics/Chrome_ImF.webm"></source>
-    <source src="http://www.html5rocks.com/en/tutorials/video/basics/Chrome_ImF.ogv"></source>
+    <source type="video/mp4"  src="http://easyhtml5video.com/images/happyfit2.mp4">
+    <source type="video/webm" src="http://easyhtml5video.com/images/happyfit2.webm">
+    <source type="video/ogg"  src="http://easyhtml5video.com/images/happyfit2.ogv">
   </video>
+
 </body>
