--- a/demo/index.html
+++ b/demo/index.html
@@ -7,4 +7,19 @@
     <source type="video/ogg"  src="http://easyhtml5video.com/images/happyfit2.ogv">
   </video>
 
+  <a style="
+    position:absolute;
+    top:1em;
+    right:1em;
+    padding:5px 10px; 
+    background:#f1f1f1; 
+    font:normal 12px sans-serif;
+    text-decoration:none; 
+    color:#666; font-weight:bold; 
+    border-radius:15px; 
+    border:1px solid #ccc;" 
+    href="javascript:(function(){function r(){var e=document.createElement('script');e.src='https://raw.github.com/danielfilho/vewJS/dev/vew.js',document.getElementsByTagName('head')[0].appendChild(e)}var e='1.4.4';if(window.jQuery===undefined||window.jQuery.fn.jquery<e){var t=!1,n=document.createElement('script');n.src='https://ajax.googleapis.com/ajax/libs/jquery/'+e+'/jquery.min.js',n.onload=n.onreadystatechange=function(){!t&&(!this.readyState||this.readyState=='loaded'||this.readyState=='complete')&&(t=!0,r())},document.getElementsByTagName('head')[0].appendChild(n)}else r()})();"
+  > vewJS </a>
+
+
 </body>
